# consumer_sim_card

./: .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  pyproject.toml  werf.yaml
.helm/: values.yaml
.helm/templates/: deployment.yaml  ingress.yaml  registry-secret.yaml  service.yaml
src/request_sim_validity_consumer/: __init__.py  app.py  main_process.py  metrics.py  msg_models.py  settings.py
src/request_sim_validity_consumer/soap/: __init__.py  adapter_smev.py  soap_client.py
src/request_sim_validity_consumer/soap/schema_loader/: loader.py  transport.py
src/request_sim_validity_consumer/soap/xsd/81807/: geps-smev3-2.0.2.xsd
